Fixed tx hash bug
Fixed tx hash not showing bug
Reduced font size for tx hash
Added btc address under tx hash

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1109,7 +1109,7 @@ a:hover {
 }
 
 .btc-transaction-id{
-  font-size: 12px;
+  font-size: 11px;
 }
 
 @media (min-width: 1200px){
